# windows-icons

./: Cargo.toml  README.md
.github/workflows/: publish.yml
examples/: dll.rs  icon.rs  main.rs  process.rs
src/: dll_icons.rs  lib.rs  uwp_apps.rs
src/utils/: image_utils.rs  process_utils.rs
