[package]
name = "windows-icons"
description = "A simple library to extract icons from files on Windows"
version = "0.2.1"
authors = ["Zach Connelly", "iKineticate"]
edition = "2024"
license = "MIT"

[dependencies]
image = "0.25"
base64 = "0.22.1"
glob = "0.3.2"

[dependencies.windows]
version = "0.60.0"
features = [
    "Win32_UI",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
]
